<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PokerQuiz</string>
    <string name="nickname">nickname</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="no_rooms_found">No rooms found</string>
    <string name="connected_to">"Connected to "</string>
    <string name="error_connecting_to">"Error connecting to "</string>
    <string name="create_room">Create room</string>
    <string name="enter_room">Enter to existing room</string>
    <string name="lets_play_the_game">Let\'s play the game…</string>
    <string name="room_name">room name</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="photo_processing_problem">A problem occured while processing image.</string>
    <string name="pick_photo">Pick photo from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select picture</string>
    <string name="quiz_questions">Quiz Questions</string>
    <string name="new_gamer">New gamer</string>
    <string name="wants_to_join">wants to join this room</string>
    <string name="reject">REJECT</string>
    <string name="close_your_room">Close your room</string>
    <string name="enter_your_room">Enter your room</string>
    <string name="select_language">Select language</string>
    <string name="system_language">System language</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="error">Error</string>
    <string name="internet_problem">A problem occured while connetcing to server. Please check your internet connection.</string>
    <string name="set_questions">Set questions</string>
    <string name="max_five">Max 5</string>
    <string name="start_new_game">Start new game</string>
    <string name="start_new_round">Start new round</string>
    <string name="check_owners_answer">Check owners answer</string>
    <string name="try_to_answer">Try to answer</string>
    <string name="exchange_cards">Exchange cards</string>
    <string name="connection_errer">Connection error</string>
    <string name="problem_connecting_croupier">A problem occured while connecting croupier device. Please chceck your WI-FI connection.</string>
    <string name="joining_room">Joining room</string>
    <string name="response">Response</string>
    <string name="croupier_accepted">Croupier accepted your request</string>
    <string name="croupier_rejected">Croupier rejected your request</string>
    <string name="timeout">Timeout</string>
    <string name="croupier_not_answered">Croupier didn\'t answer to your request in specified time.</string>
    <string name="has_joined_room">has joined room.</string>
    <string name="exchanging_cards">Exchanging cards</string>
    <string name="sure_exchanging_cards">Are you sure you want to exchange selected cards?</string>
    <string name="exchanged_cards">exchanged his cards.</string>
    <string name="wants_to_exchange_cards">wants to exchange cards.</string>
    <string name="new_game_started">New game started</string>
    <string name="croupier_started_game">Croupier started a new game. Number of gamers:</string>
    <string name="categories_selected">Categories selected</string>
    <string name="croupier_selected_categories">Croupier has selected the following categories:</string>
    <string name="new_round_started">New round started</string>
    <string name="next_phase_started">Next game phase started</string>
    <string name="auto_allow_new_players">Auto allow new players</string>
    <string name="auto_allow_cards_exchanging">Auto allow cards exchanging</string>
    <string name="start_next_phase">Start next phase</string>
    <string name="answer">Answer</string>
    <string name="declare_as_correct">Declare as correct</string>
    <string name="success">Success</string>
    <string name="you_answered_correctly">You answered correctly</string>
    <string name="you_answered_wrong">You answered wrong</string>
    <string name="failure">Failure</string>
    <string name="move_not_allowed">This move is not allowed</string>
    <string name="you_declared_as_correct">You declared this question as correct</string>
    <string name="declared">declared</string>
    <string name="visible">visible</string>
    <string name="real">real</string>

</resources>
