<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium"
    android:weightSum="1"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_small"
        android:layout_weight="0.5"
        android:background="@color/white_transparent_light">

        <TextView
            android:id="@+id/txtvSelectLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSystemLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_language"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rbEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"/>

            <RadioButton
                android:id="@+id/rbPolish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polish"
                android:textColor="@color/white"/>
        </RadioGroup>


    </LinearLayout>
</LinearLayout>