<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/margin_small">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Allowing new players"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/checkNewPlayersAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="auto"/>

        <EditText
            android:id="@+id/etGamersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="60dp"
            android:hint="@string/max_five"/>
        </LinearLayout>

    <Button
        android:id="@+id/btnStartNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/start_new_game"/>

    <Button
        android:id="@+id/btnStartNewRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/start_new_round"/>

    <Button
        android:id="@+id/btnSetQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_questions"
        android:layout_marginTop="@dimen/margin_small"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>