<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_small">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@drawable/big_card_background">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:layout_margin="@dimen/margin_small">

                <TextView
                    android:id="@+id/txtvSign"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textSize="28dp"
                    android:text="K"
                    android:textColor="@color/pure_red"
                    android:includeFontPadding="false"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/imgvColor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/heart"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="45dp"
                android:background="@drawable/big_card_background">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/margin_small">

                        <TextView
                            android:id="@+id/txtvQuestion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:gravity="center"/>

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioAnswerFirst"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:enabled="false"
                                android:layout_marginTop="@dimen/margin_medium"/>

                            <RadioButton
                                android:id="@+id/radioAnswerSecond"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:enabled="false"
                                android:layout_marginTop="@dimen/margin_small"/>

                            <RadioButton
                                android:id="@+id/radioAnswerThird"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:enabled="false"
                                android:layout_marginTop="@dimen/margin_small"/>

                            <RadioButton
                                android:id="@+id/radioAnswerFourth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:enabled="false"
                                android:layout_marginTop="@dimen/margin_small"/>
                            </RadioGroup>

                    </LinearLayout>
                </ScrollView>

                <Button
                    android:id="@+id/btnAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/answer"
                    android:visibility="gone"/>

                </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llExtraOptions"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_large"
            android:visibility="gone">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/icon_check"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_owners_answer"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/tick"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/try_to_answer"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>